--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -13,25 +13,55 @@
 
             <div class="col-sm-6 left-pane">
                 <h2 style="text-align: center;">welcome</h2>
-                <form action="">
+                <form action="create_timing" method="POST">
                     <div class="form-group row">
                         <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="name" placeholder="name">
+                            <input type="text" class="form-control <%= valid.name %> " name="name" placeholder="name" required>
+                            <div class="invalid-feedback">
+                                <%= errors.name %>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
                         <div class="col-sm-10">
-                            <input type="email" class="form-control" name="email" placeholder="Email">
+                            <input type="email" class="form-control <%= valid.email %>  " name="email" placeholder="Email" required>
+                            <div class="invalid-feedback">
+                                <%= errors.email %>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="inputEmail3" class="col-sm-2 col-form-label">Conatact no.</label>
                         <div class="col-sm-10">
-                            <input type="number" class="form-control" name="contact" placeholder="Conatact">
+                            <input type="number" class="form-control <%= valid.contact %>  " name="contact" placeholder="Conatact" required>
+                            <div class="invalid-feedback">
+                                <%= errors.contact %>
+                            </div>
                         </div>
                     </div>
+                    <hr>
+                    <h3>What items you wish to buy</h3>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" name="groceries" id='groceries'>
+                        <label class="form-check-label" for="groceries">Groceries</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" name="liquor" id='liquor'>
+                        <label class="form-check-label" for="liquor">Liquor</label>
+                    </div>
+                    <hr>
+                    <div class="form-group">
+                        <label for="visit_time">=> Select your visit time</label>
+                        <select class="form-control" id="visit_time">
+                            <% for( let index = 0; index < availableTimes.length; index++ ) { %>
+                                <option><%= availableTimes[index] %></option>
+                            <% } %>
+                        </select>
+                    </div>
+                    <hr>
+                    <button type="submit" class="btn btn-primary mb-2">Request validity</button>
                 </form>
             </div>
 
