--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -20,3 +20,14 @@
   height: 5vh;
   margin: 0 !important;
 }
+
+.landing-page {
+  padding: 2.5%;
+  background-color: #fdfbf1;
+}
+
+.landing-page form {
+  border: solid 1px #fae589;
+  padding: 1.5%;
+  border-radius: 2.5%;
+}
